# pingpong-game

./: Cargo.toml
player_1_udp/: Cargo.toml
player_1_udp/src/: cmd_in.rs  main.rs
player_1_udp/src/game/: pingpong.rs
player_2_udp/: Cargo.toml
player_2_udp/src/: main.rs
player_2_udp/src/game/: pingpong.rs
