[package]
name = "player_2_udp"
version = "0.1.0"
edition = "2021"

[dependencies]
library = {path = "../library"}
ggez = "0.5.1"
rand = "0.7.3"
tokio = { version = "1", features = ["full"] }
async-std = "1.10"
bincode = "1.3"  
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.23"

